Update composer description

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "alex-robert/loggr",
   "version": "0.0.0",
-  "description": "PHP Logger, Logging is fun \o/",
+  "description": "PHP Logger, Logging is fun !",
   "keywords": ["php", "log"],
   "type": "library",
   "authors": [
