--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "alex-robert/loggr",
   "version": "0.0.0",
-  "description": "PHP Logger, Logging is fun !",
-  "keywords": ["php", "log"],
+  "description": "PHP Logger, PSR-3, what else ?",
+  "keywords": ["php", "log", "PSR-3"],
   "type": "library",
   "authors": [
     {
