--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: php
 services: mysql
 php:
-  - '5.5'
+  - '5.6'
+install:
+  - composer install
+script:
+  - ./vendor/bin/autoum -d /tests/units
