--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "name": "alex-robert/loggr",
-  "version": "1.2.1-stable",
+  "version": "2.0.0-beta",
   "description": "PHP Logger, PSR-3, what else ?",
   "keywords": ["php", "log", "PSR-3"],
   "type": "library",
+
   "authors": [
     {
       "name": "Alex Robert",
