--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ todo.md
 /tests/console.php
 /tests/file.php
 /tests/mysql.php
-/tests/loggr.php.php
-/tests/stack.php.php
+/tests/loggr.php
+/tests/stack.php
 /tests/tmp/*
 !*.gitkeep
